# risk

./: .gitignore  BRAINSTORM.md  Cargo.toml  DOC.md  README  README.md  error.txt  flake.nix  output.txt  test.rk
failures/: grammar.pest  lexer.rs  parser.lalrpop  parser_with_chumsky.rs  tokens.rs
src/: main.rs
src/ast/: mod.rs
src/bytecode/: chunk.rs  constant.rs  mod.rs  opcode.rs
src/compiler/: mod.rs
src/parser/: ast.rs  error.rs  grammar.pest  lexer.rs  mod.rs  parser (1).alrpop  parser (2).alrpop  parser.lalrpop  parser.rs  parser2.alrpop  test.rs
src/semantics/: error.rs  mod.rs  warning.rs
src/semantics/tc/: ast.rs  error.rs  mod.rs
