[package]
name = "risk"
version = "0.1.0"
edition = "2021"
authors = ["Lokasku <lukasku@proton.me>"]
description = "Some pure functional programming language."
repository = "https://github.com/Lokasku/risk"
license = "GPL-3.0"
keywords = ["pl", "fp", "language"]


[dependencies]
lazy_static = "1.4.0"
pest = "2.7.8"
pest_derive = "2.7.8"
