[package]
name = "risk"
version = "0.1.0"
edition = "2021"
authors = ["Lokasku <lukasku@proton.me>"]
description = "Some pure functional programming language."
repository = "https://github.com/Lokasku/risk"
license = "GPL-3.0"
keywords = ["pl", "fp", "language"]


[dependencies]
logos = { version = "0.14.0"}
chumsky = "0.9.3"
ariadne = { version = "0.4.0", features = ["auto-color"] }
polonius-the-crab = "0.4.1"
